# cellular_mesh_meter

./: CMakeLists.txt  Kconfig  prj.conf
boards/: nrf52840dongle_nrf52840.conf  nrf54l15dk_nrf54l15_cpuapp.conf  nrf54l15dk_nrf54l15_cpuapp.overlay
snippets/logging/: logging.conf
snippets/multiprotocol_ble/: multiprotocol_ble.conf
src/: coap_meter_utils.c  coap_meter_utils.h  coap_utils.c  coap_utils.h  main.c  modem_utils.h  modem_utils_simulated.c  modem_utils_slm.c
